--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 Тайный Санта 3D</title>
+    <title>🎄 Тайный Санта - СуперСемейка</title>
     <style>
         :root {
             --primary-color: #e74c3c;
