--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     <!-- Login Screen -->
     <div class="screen active login-screen" id="loginScreen">
         <div class="login-container">
-            <h1>🎄 Тайный Санта 3D</h1>
+            <h1>🎄 Тайный Санта - СуперСемейка </h1>
             <div class="gift-box-3d">
                 <div class="gift-face gift-front">🎁</div>
                 <div class="gift-face gift-back">🎁</div>
